src/Routes/Projects/Projects.css
.projects {
  padding-top: 0rem;
  padding-bottom: 2em;
}

.projects dl {
  display: flex;
  flex-direction: column;
  justify-content: center;
  list-style: none;
}

.contact-button {
  margin: 1em;
  color: #666563;
}

.contact-button a {
  text-decoration: none;
  color: #213F52;
}

.contact-button a:hover {
  color: #A7C0CF;
}

.projects-button {
  text-decoration: none;
  color: #213F52;
}

.projects-button:hover {
  color: #666563;
  cursor: pointer;
}

.home {
  padding-bottom: 2em;
}

